Session 2 and 3 tasks

--- a/ChargeIt/Views/ChargeMachines/AddStation.cshtml
+++ b/ChargeIt/Views/ChargeMachines/AddStation.cshtml
@@ -1,5 +1,7 @@
 ﻿@model ChargeMachineViewModel
 
+<h1 class="display-4 mb-4">New station</h1>
+
 <form asp-controller="ChargeMachines" asp-action="AddNewStation" method="post">
   <div class="form-group mb-forms">
     <label asp-for="City"></label>
