--- a/ChargeIt/Views/Home/Index.cshtml
+++ b/ChargeIt/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about building Web apps with ASP.NET Core.</p>
+    <h1 class="display-4">Welcome into the future of charging</h1>
+    <p>Small things can do a better world</p>
+
+    <img src="https://astros.in/wp-content/uploads/2018/10/electrifyamericachargersbybtcpower1.jpg" class="img-fluid" alt="Charge IT">
 </div>
