--- a/ChargeIt/Views/ChargeMachines/Index.cshtml
+++ b/ChargeIt/Views/ChargeMachines/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<ChargeMachineViewModel>
 
+<h1 class="display-4 mb-4">Charge machines overview</h1>
+
 <a type="button" class="btn btn-primary add-station-button" asp-controller="ChargeMachines" asp-action="AddStation">Add Station</a>
 
 <table class="table table-striped table-hover">
