--- a/ChargeIt/Views/Cars/Index.cshtml
+++ b/ChargeIt/Views/Cars/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h1 class="display-4 mb-4">Cars overview</h1>
 
-<a type="button" class="btn btn-primary" asp-controller="Cars" asp-action="AddCar">Add Car</a>
+<a type="button" class="btn btn-primary add-button" asp-controller="Cars" asp-action="AddCar">Add Car</a>
 
 <table class="table table-striped table-hover">
   <thead>
