--- a/ChargeIt/Views/ChargeMachines/Index.cshtml
+++ b/ChargeIt/Views/ChargeMachines/Index.cshtml
@@ -2,7 +2,7 @@
 
 <h1 class="display-4 mb-4">Charge machines overview</h1>
 
-<a type="button" class="btn btn-primary add-station-button" asp-controller="ChargeMachines" asp-action="AddStation">Add Station</a>
+<a type="button" class="btn btn-primary add-button" asp-controller="ChargeMachines" asp-action="AddStation">Add Station</a>
 
 <table class="table table-striped table-hover">
   <thead>
@@ -14,6 +14,7 @@
       <th scope="col">Number</th>
       <th scope="col">Longitude</th>
       <th scope="col">Latitude</th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -27,6 +28,25 @@
               <td>@chargeMachine.Number</td>
               <td>@chargeMachine.Longitude</td>
               <td>@chargeMachine.Latitude</td>
+              <td>
+                  <a type="button" 
+                     class="btn btn-primary"
+                     asp-controller="ChargeMachines"
+                     asp-action="StationDetails"
+                     asp-route-id="@chargeMachine.Id">Details</a>
+
+                  <a type="button" 
+                     class="btn btn-success"
+                     asp-controller="ChargeMachines"
+                     asp-action="EditStation"
+                     asp-route-id="@chargeMachine.Id">Edit</a>
+
+                  <a type="button" 
+                     class="btn btn-danger"
+                     asp-controller="ChargeMachines"
+                     asp-action="DeleteStation"
+                     asp-route-id="@chargeMachine.Id">Delete</a>
+              </td>
           </tr>
       }
     
