Edit/delete cars

--- a/ChargeIt/Views/Cars/AddCar.cshtml
+++ b/ChargeIt/Views/Cars/AddCar.cshtml
@@ -1,6 +1,6 @@
 ﻿@model CarViewModel
 
-<h1 class="display-4 mb-4">New car</h1>
+<h1 class="margin-bottom-40">New car</h1>
 
 <form asp-controller="Cars" asp-action="AddNewCar" method="post">
   <div class="form-group mb-forms">
