--- a/ChargeIt/Views/ChargeMachines/AddStation.cshtml
+++ b/ChargeIt/Views/ChargeMachines/AddStation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChargeMachineViewModel
 
-<h1 class="display-4 mb-4">New station</h1>
+<h1 class="margin-bottom-40">New station</h1>
 
 <form asp-controller="ChargeMachines" asp-action="AddNewStation" method="post">
   <div class="form-group mb-forms">
