--- a/ChargeIt/Views/Cars/Index.cshtml
+++ b/ChargeIt/Views/Cars/Index.cshtml
@@ -1,26 +1,51 @@
 ﻿@model List<CarViewModel>
 
-<h1 class="display-4 mb-4">Cars overview</h1>
-
-<a type="button" class="btn btn-primary add-button" asp-controller="Cars" asp-action="AddCar">Add Car</a>
+<div class="d-flex align-items-center">
+    <h1 class="margin-bottom-40 margin-right-auto">Cars overview</h1>
+    <a type="button" class="btn btn-primary add-button" asp-controller="Cars" asp-action="AddCar">
+        <i class="fas fa-plus icon-button"></i>
+        <span>Add Car</span>
+    </a>
+</div>
 
 <table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th scope="col">Id</th>
-      <th scope="col">Plate Number</th>
-    </tr>
-  </thead>
-  <tbody>
-      @foreach (var chargeMachine in Model)
-      {
-          <tr>
-              <th scope="row">@chargeMachine.Id</th>
-              <td>@chargeMachine.PlateNumber</td>
-          </tr>
-      }
-    
-  </tbody>
+    <thead>
+        <tr>
+            <th>Id</th>
+            <th>Plate Number</th>
+            <th>Actions</th>
+        </tr>>
+    </thead>
+    <tbody>
+        @foreach (var car in Model)
+        {
+            var index = Model.IndexOf(car) + 1;
+            <tr>
+                <th>@index</th>
+                <td>@car.PlateNumber</td>
+                <td>
+                    <a type="button"
+                       class="btn btn-success"
+                       asp-controller="Cars"
+                       asp-action="EditCar"
+                       asp-route-id="@car.Id">
+                        <i class="fas fa-edit icon-button"></i>
+                        <span>Edit</span>
+                    </a>
+
+                    <a type="button"
+                       class="btn btn-danger"
+                       asp-controller="Cars"
+                       asp-action="DeleteCar"
+                       asp-route-id="@car.Id">
+                        <i class="fa fa-trash icon-button"></i>
+                        <span>Remove</span>
+                    </a>
+                </td>
+            </tr>
+        }
+
+    </tbody>
 </table>
 
 
