--- a/ChargeIt/Views/ChargeMachines/EditStation.cshtml
+++ b/ChargeIt/Views/ChargeMachines/EditStation.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ChargeMachineViewModel
 
-<h1 class="display-4 mb-4">Edit station</h1>
+<h1 class="margin-bottom-40">Edit station</h1>
 
 <form asp-controller="ChargeMachines" asp-action="EditExistingStation" method="post">
     <input type="text" class="form-control" asp-for="Id" hidden>
