--- a/ChargeIt/Views/Bookings/Index.cshtml
+++ b/ChargeIt/Views/Bookings/Index.cshtml
@@ -38,14 +38,12 @@
     </div>
     
     <div class="form-group mb-forms">
-        <label asp-for="CarId" class="form-label"></label>
+        <label asp-for="IntervalHour" class="form-label"></label>
         <div class="col-md-12">
-            <select asp-for="CarId"
-                    asp-items="@(new SelectList(Model.Cars, nameof(CarViewModel.Id), nameof(CarViewModel.PlateNumber)))"
-                    class="form-control form-input">
-                <option value="0">Select a car</option>
+            <select id="available-intervals-dropdown" asp-for="IntervalHour" class="form-control form-input">
+                <option value="-1">Select an available interval slot</option>
             </select>
-            <span asp-validation-for="CarId"></span>
+            <span asp-validation-for="IntervalHour"></span>
         </div>
     </div>
 
@@ -62,7 +60,22 @@
             url: "/Bookings/GetAvailableIntervals?date=" + date + "&chargeMachineId=" + chargeMachineId,
             type: 'get',
             success: function(data) {
-                console.log(data);
+                var availableIntervalsDropdown = document.getElementById("available-intervals-dropdown");
+                availableIntervalsDropdown.innerHTML = "";
+
+                var defaultOption = document.createElement("option");
+                defaultOption.value = -1;
+                defaultOption.innerText = "Select an available interval slot";
+
+                availableIntervalsDropdown.appendChild(defaultOption);
+
+                for (var i = 0; i < data.length; i++) {
+                    var option = document.createElement("option");
+                    option.value = data[i];
+                    option.innerText = data[i];
+
+                    availableIntervalsDropdown.appendChild(option);
+                }
             }
         });
     }
