Added booking history info

--- a/ChargeIt/wwwroot/css/site.css
+++ b/ChargeIt/wwwroot/css/site.css
@@ -25,6 +25,10 @@ body {
     margin-bottom: 20px;
 }
 
+.margin-top-40 {
+    margin-bottom: 20px;
+}
+
 .margin-right-auto {
     margin-right: auto;
 }
