--- a/ChargeIt/Views/Cars/Index.cshtml
+++ b/ChargeIt/Views/Cars/Index.cshtml
@@ -11,7 +11,7 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th>Id</th>
+            <th>#</th>
             <th>Plate Number</th>
             <th>Actions</th>
         </tr>
@@ -24,6 +24,14 @@
                 <th>@index</th>
                 <td>@car.PlateNumber</td>
                 <td>
+                    <a type="button"
+                       class="btn btn-primary"
+                       asp-controller="Cars"
+                       asp-action="CarDetails"
+                       asp-route-id="@car.Id">
+                        <i class="fa fa-info-circle icon-button"></i>
+                        <span>Details</span>
+                    </a>
                     <a type="button"
                        class="btn btn-success"
                        asp-controller="Cars"
