--- a/ChargeIt/Views/ChargeMachines/Index.cshtml
+++ b/ChargeIt/Views/ChargeMachines/Index.cshtml
@@ -12,7 +12,7 @@
 <table class="table table-striped table-hover">
     <thead>
         <tr>
-            <th scope="col">Id</th>
+            <th scope="col">#</th>
             <th scope="col">Code</th>
             <th scope="col">City</th>
             <th scope="col">Street</th>
