--- a/ChargeIt/Views/ChargeMachines/StationDetails.cshtml
+++ b/ChargeIt/Views/ChargeMachines/StationDetails.cshtml
@@ -1,34 +1,60 @@
-﻿@model ChargeMachineViewModel
+﻿@model StationDetailsViewModel
 
-<h1 class="margin-bottom-40">Machine code: @Model.Code</h1>
+<h1 class="margin-bottom-40">Machine code: @Model.ChargeMachine.Code</h1>
 
 <div class="card" style="width: 30rem;">
   <img class="card-img-top" src="https://astros.in/wp-content/uploads/2018/10/electrifyamericachargersbybtcpower1.jpg" alt="Station">
   <div class="card-body">
-    <h5 class="card-title">@Model.Code</h5>
+    <h5 class="card-title">@Model.ChargeMachine.Code</h5>
     <div>
-         <label asp-for="City" class="details-label-form"></label>
-         <span> @Model.City </span>
+         <label asp-for="ChargeMachine.City" class="details-label-form"></label>
+         <span> @Model.ChargeMachine.City </span>
     </div>
 
     <div>
-         <label asp-for="Street" class="details-label-form"></label>
-         <span> @Model.Street </span>
+         <label asp-for="ChargeMachine.Street" class="details-label-form"></label>
+         <span> @Model.ChargeMachine.Street </span>
      </div>
 
      <div>
-         <label asp-for="Number" class="details-label-form"></label>
-        <span> @Model.Number </span>
+         <label asp-for="ChargeMachine.Number" class="details-label-form"></label>
+        <span> @Model.ChargeMachine.Number </span>
     </div>
 
     <div>
-        <label asp-for="Latitude" class="details-label-form"></label>
-        <span> @Model.Latitude </span>
+        <label asp-for="ChargeMachine.Latitude" class="details-label-form"></label>
+        <span> @Model.ChargeMachine.Latitude </span>
     </div>
 
     <div>
-        <label asp-for="Longitude" class="details-label-form"></label>
-        <span> @Model.Longitude </span>
+        <label asp-for="ChargeMachine.Longitude" class="details-label-form"></label>
+        <span> @Model.ChargeMachine.Longitude </span>
     </div>
   </div>
 </div>
+
+<h1 class="margin-bottom-40 margin-top-40">Bookings history</h1>
+
+<table class="table table-striped table-hover">
+    <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Code</th>
+            <th scope="col">Start date</th>
+            <th scope="col">Car plate number</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var booking in Model.Bookings)
+        {
+            var index = Model.Bookings.IndexOf(booking) + 1;
+            <tr>
+                <th>@index</th>
+                <td>@booking.Code</td>
+                <td>@booking.StartTime.ToString("g")</td>
+                <td>@booking.Car.PlateNumber</td>
+            </tr>
+        }
+
+    </tbody>
+</table>
