--- a/ChargeIt/Views/ChargeMachines/Index.cshtml
+++ b/ChargeIt/Views/ChargeMachines/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<ChargeMachineViewModel>
 
+<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <div class="d-flex align-items-center">
     <h1 class="margin-bottom-40 margin-right-auto">Charge machines overview</h1>
 
@@ -9,7 +11,7 @@
     </a>
 </div>
 
-<table class="table table-striped table-hover">
+<table id="charge-machines-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -68,6 +70,13 @@
     </tbody>
 </table>
 
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready( function () {
+        $('#charge-machines-table').DataTable();
+    } );
+</script>
 
 
 
