--- a/ChargeIt/Views/Shared/_Layout.cshtml
+++ b/ChargeIt/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <a class="nav-link text-white" asp-area="" asp-controller="ChargeMachines" asp-action="Index">Charge Machines</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-white" asp-area="" asp-controller="CarOwners" asp-action="Index">Car Owners</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-white" asp-area="" asp-controller="Cars" asp-action="Index">Cars</a>
                         </li>
                         <li class="nav-item">
