--- a/ChargeIt/Views/CarOwners/CarOwnerDetails.cshtml
+++ b/ChargeIt/Views/CarOwners/CarOwnerDetails.cshtml
@@ -1,10 +1,12 @@
 ﻿@model CarOwnerDetailsViewModel
 
+<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <h1 class="margin-bottom-40">Car owner: @Model.Name - @Model.Email</h1>
 
 <h1 class="margin-bottom-40 margin-top-40">Cars</h1>
 
-<table class="table table-striped table-hover">
+<table id="cars-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -23,3 +25,11 @@
 
     </tbody>
 </table>
+
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready( function () {
+        $('#cars-table').DataTable();
+    } );
+</script>
