--- a/ChargeIt/Views/CarOwners/Index.cshtml
+++ b/ChargeIt/Views/CarOwners/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<CarOwnerViewModel>
 
+<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <div class="d-flex align-items-center">
     <h1 class="margin-bottom-40 margin-right-auto">Car owners overview</h1>
     <a type="button" class="btn btn-primary add-button" asp-controller="CarOwners" asp-action="AddCarOwner">
@@ -8,7 +10,7 @@
     </a>
 </div>
 
-<table class="table table-striped table-hover">
+<table id="car-owners-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th>#</th>
@@ -58,6 +60,13 @@
     </tbody>
 </table>
 
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready( function () {
+        $('#car-owners-table').DataTable();
+    } );
+</script>
 
 
 
