--- a/ChargeIt/Views/Cars/Index.cshtml
+++ b/ChargeIt/Views/Cars/Index.cshtml
@@ -1,5 +1,7 @@
 ﻿@model List<CarViewModel>
 
+<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <div class="d-flex align-items-center">
     <h1 class="margin-bottom-40 margin-right-auto">Cars overview</h1>
     <a type="button" class="btn btn-primary add-button" asp-controller="Cars" asp-action="AddCar">
@@ -8,7 +10,7 @@
     </a>
 </div>
 
-<table class="table table-striped table-hover">
+<table id="cars-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th>#</th>
@@ -58,6 +60,12 @@
     </tbody>
 </table>
 
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 
+<script>
+    $(document).ready( function () {
+        $('#cars-table').DataTable();
+    } );
+</script>
 
 
