--- a/ChargeIt/Views/ChargeMachines/StationDetails.cshtml
+++ b/ChargeIt/Views/ChargeMachines/StationDetails.cshtml
@@ -1,5 +1,7 @@
 ﻿@model StationDetailsViewModel
 
+<link rel="stylesheet" href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" />
+
 <h1 class="margin-bottom-40">Machine code: @Model.ChargeMachine.Code</h1>
 
 <div class="card" style="width: 30rem;">
@@ -35,7 +37,7 @@
 
 <h1 class="margin-bottom-40 margin-top-40">Bookings history</h1>
 
-<table class="table table-striped table-hover">
+<table id="bookings-table" class="table table-striped table-hover">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -74,3 +76,11 @@
 
     </tbody>
 </table>
+
+<script src="//cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+
+<script>
+    $(document).ready( function () {
+        $('#bookings-table').DataTable();
+    } );
+</script>
